ADD streamlit Dashboard

--- a/05_해외관광객추이.ipynb
+++ b/05_해외관광객추이.ipynb
@@ -826,7 +826,49 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# 전체 방문객 수 변화 분석\nfig, (ax1, ax2) = plt.subplots(2, 1, figsize=(16, 12))\n\n# 전체 방문객 수 변화 (2010-2024)\nax1.plot(long_df.index, long_df['전체'], marker='o', linewidth=3, markersize=8, color='darkblue')\nax1.set_title('2010-2024년 외국인 방문객 총 수 변화', fontproperties=korean_font_prop, fontsize=14, fontweight='bold')\nax1.set_ylabel('방문객 수 (명)', fontproperties=korean_font_prop)\nax1.tick_params(axis='x', rotation=45)\nax1.grid(True, alpha=0.3)\n\n# 값 표시\nfor i, (year, value) in enumerate(zip(long_df.index, long_df['전체'])):\n    if i % 2 == 0:  # 2년마다 표시\n        ax1.annotate(f'{value:,.0f}', \n                    xy=(year, value), \n                    xytext=(0, 10), \n                    textcoords='offset points', \n                    ha='center', \n                    fontsize=9,\n                    fontproperties=korean_font_prop)\n\n# 국가/지역별 방문객 수 변화\ncountries = ['일본', '중국', '미국', '기타']\ncolors = ['red', 'orange', 'blue', 'gray']\nmarkers = ['o', 's', '^', 'D']\n\nfor country, color, marker in zip(countries, colors, markers):\n    ax2.plot(long_df.index, long_df[country], \n            marker=marker, label=country, linewidth=2, \n            markersize=6, color=color, alpha=0.8)\n\nax2.set_title('2010-2024년 주요 국가/지역별 외국인 방문객 수 변화', fontproperties=korean_font_prop, fontsize=14, fontweight='bold')\nax2.set_ylabel('방문객 수 (명)', fontproperties=korean_font_prop)\nax2.tick_params(axis='x', rotation=45)\nlegend = ax2.legend()\nfor text in legend.get_texts():\n    text.set_fontproperties(korean_font_prop)\nax2.grid(True, alpha=0.3)\n\nplt.tight_layout()\nplt.show()"
+   "source": [
+    "# 전체 방문객 수 변화 분석\n",
+    "fig, (ax1, ax2) = plt.subplots(2, 1, figsize=(16, 12))\n",
+    "\n",
+    "# 전체 방문객 수 변화 (2010-2024)\n",
+    "ax1.plot(long_df.index, long_df['전체'], marker='o', linewidth=3, markersize=8, color='darkblue')\n",
+    "ax1.set_title('2010-2024년 외국인 방문객 총 수 변화', fontproperties=korean_font_prop, fontsize=14, fontweight='bold')\n",
+    "ax1.set_ylabel('방문객 수 (명)', fontproperties=korean_font_prop)\n",
+    "ax1.tick_params(axis='x', rotation=45)\n",
+    "ax1.grid(True, alpha=0.3)\n",
+    "\n",
+    "# 값 표시\n",
+    "for i, (year, value) in enumerate(zip(long_df.index, long_df['전체'])):\n",
+    "    if i % 2 == 0:  # 2년마다 표시\n",
+    "        ax1.annotate(f'{value:,.0f}', \n",
+    "                    xy=(year, value), \n",
+    "                    xytext=(0, 10), \n",
+    "                    textcoords='offset points', \n",
+    "                    ha='center', \n",
+    "                    fontsize=9,\n",
+    "                    fontproperties=korean_font_prop)\n",
+    "\n",
+    "# 국가/지역별 방문객 수 변화\n",
+    "countries = ['일본', '중국', '미국', '기타']\n",
+    "colors = ['red', 'orange', 'blue', 'gray']\n",
+    "markers = ['o', 's', '^', 'D']\n",
+    "\n",
+    "for country, color, marker in zip(countries, colors, markers):\n",
+    "    ax2.plot(long_df.index, long_df[country], \n",
+    "            marker=marker, label=country, linewidth=2, \n",
+    "            markersize=6, color=color, alpha=0.8)\n",
+    "\n",
+    "ax2.set_title('2010-2024년 주요 국가/지역별 외국인 방문객 수 변화', fontproperties=korean_font_prop, fontsize=14, fontweight='bold')\n",
+    "ax2.set_ylabel('방문객 수 (명)', fontproperties=korean_font_prop)\n",
+    "ax2.tick_params(axis='x', rotation=45)\n",
+    "legend = ax2.legend()\n",
+    "for text in legend.get_texts():\n",
+    "    text.set_fontproperties(korean_font_prop)\n",
+    "ax2.grid(True, alpha=0.3)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
   },
   {
    "cell_type": "code",
